--- a/views/sub/bidRegist.ejs
+++ b/views/sub/bidRegist.ejs
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-      <form action="/bidRegist" method="POST" enctype="multipart/form-data">
+      <form action="/toy/bidRegist" method="POST" enctype="multipart/form-data">
       <h1>경매등록</h1>
       <hr/>
       <br>
