--- a/views/sub/coin.ejs
+++ b/views/sub/coin.ejs
@@ -13,7 +13,7 @@ function parents(){
 }
 </script>
 <body>   
-      <form action="/coin" method="POST">
+      <form action="/users/coin" method="POST">
         <h1>우리아이코인충전</h1>
         <hr/>
         <label>현재코인 <%=sess.info.coin%></label><br>         
