--- a/views/join.ejs
+++ b/views/join.ejs
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-      <form action="/join" method="POST">
+      <form action="/users/join" method="POST">
       <h1>회원가입</h1>
       <hr/>
       <br>
