--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
    <title>로그인</title>
 </head>
 <body id='lo-jo'>    
-      <form action="/login" method="POST">
+      <form action="/users/login" method="POST">
         <h1>로그인</h1>
         <hr/>
         <label>아이디</label>
@@ -12,7 +12,7 @@
         <label>패스워드</label> 
         <input type="password" id="pw" name="pw"><br>
       <input id="login_button" type="submit"  value="로그인"/><br>
-      <a href="/join" style="margin-left:130px;">회원가입</a>
+      <a href="/users/join" style="margin-left:130px;">회원가입</a>
       </form>
 </body>
 </html>
