--- a/views/sub/mypage.ejs
+++ b/views/sub/mypage.ejs
@@ -22,7 +22,7 @@
         <h1>내가 등록한 장난감</h1>
         <%for(var i=0;i<data.length; i++) { %>
         <div style="float: left; width: 300px; margin: 6%;">
-            <div><a href="/detail/<%=data[i].toyId%>"><img src="/<%=data[i].toyPic%>" width="400" height="430"
+            <div><a href="/toy/detail/<%=data[i].toyId%>"><img src="/<%=data[i].toyPic%>" width="400" height="430"
                         class="toyPic" alt="상품이미지" /></a></div>
             <div><a style="text-decoration: none; color: black;" href="/detail/<%=data[i].toyId%>">
                     <h2><%=data[i].toyName%></h2>
@@ -35,12 +35,42 @@
                 <h2>현재 입찰한 친구 수 <%=data[i].bidNum%>명</h2>
             </div>
             <div>
-                <a href="/delete/<%=data[i].toyId%>" style="color: crimson;">삭제</a>
-                <a href="/modify/<%=data[i].toyId%>" style="color: darkslateblue;">수정</a>
+                <h2>입찰상태 <%=data[i].bidState%></h2>
+            </div>
+            <div>
+                <a href="/toy/delete/<%=data[i].toyId%>" style="color: crimson;">삭제</a>
+                <a href="/toy/modify/<%=data[i].toyId%>" style="color: darkslateblue;">수정</a>
             </div>
         </div>
         <% } %>
-    </div>
+        <h1>입찰 및 낙찰한 장난감</h1>
+        <%for(var i=0;i<data2.length; i++) { %>
+        <div style="float: left; width: 300px; margin: 6%;">
+            <div><a href="/toy/detail/<%=data2[i].toyId%>"><img src="/<%=data2[i].toyPic%>" width="400" height="430"
+                        class="toyPic" alt="상품이미지" /></a></div>
+            <div><a style="text-decoration: none; color: black;" href="/toy/detail/<%=data2[i].toyId%>">
+                    <h2><%=data2[i].toyName%></h2>
+                </a></div>
+            <div>
+                <h2>현재입찰코인 : <%=data2[i].currentCoin%></h2>
+            </div>
+            <div>
+                <h2>입찰한코인 : <%=data2[i].bidCoin%></h2>
+            </div>
+
+            <div>
+                <h2>입찰상태 <%=data2[i].bidState%></h2>
+            </div>
+            <%if(data2[i].bidState=='낙찰완료' && data2[i].bidUser==sess.info.id){%>
+            <form action="/sub/tel/<%=data[i].toyId%>" method="POST" enctype="multipart/form-data">
+            <div>
+                <input type="submit" value="연락처">
+            </div>
+            </form>
+            <%}%>
+        </div>
+        <% } %>
+        </div>
 
 </body>
 
