--- a/views/sub/mypage.ejs
+++ b/views/sub/mypage.ejs
@@ -7,7 +7,7 @@
 <style>
     .main {
         width: 100%;
-        height: 100%;
+        float: left;
     }
 
     .mimg {
@@ -61,13 +61,19 @@
             <div>
                 <h2>입찰상태 <%=data2[i].bidState%></h2>
             </div>
-            <%if(data2[i].bidState=='낙찰완료' && data2[i].bidUser==sess.info.id){%>
+            <%if(data2[i].bidState=='입찰완료' && data2[i].winner==sess.info.id){%>
             <form action="/sub/tel/<%=data[i].toyId%>" method="POST" enctype="multipart/form-data">
             <div>
-                <input type="submit" value="연락처">
+               
+                <p>낙찰성공  <input type="submit" value="연락처"></p>
             </div>
             </form>
             <%}%>
+            <%if(data2[i].bidState=='입찰완료' && data2[i].winner!==sess.info.id){%>
+                <div>
+                        <h2>낙찰실패</h2>
+                    </div>
+                <%}%>
         </div>
         <% } %>
         </div>
