--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,9 @@
 <head>
    <title>로그인</title>
 </head>
+<style>
+   
+</style>
 <body id='lo-jo'>    
       <form action="/users/login" method="POST">
         <h1>로그인</h1>
