--- a/views/join.ejs
+++ b/views/join.ejs
@@ -3,9 +3,13 @@
 <head>
    <title>회원가입</title>
 </head>
-
+<style>
+  .join{
+    float: left;
+  }
+</style>
 <body>
-      <form action="/users/join" method="POST">
+      <form class="join" action="/users/join" method="POST">
       <h1>회원가입</h1>
       <hr/>
       <br>
