--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,10 +4,12 @@
    <title>로그인</title>
 </head>
 <style>
-   
+   .login{
+      float: left;
+   }
 </style>
 <body id='lo-jo'>    
-      <form action="/users/login" method="POST">
+      <form class="login" action="/users/login" method="POST">
         <h1>로그인</h1>
         <hr/>
         <label>아이디</label>
