--- a/views/sub/bidRegist.ejs
+++ b/views/sub/bidRegist.ejs
@@ -3,9 +3,13 @@
 <head>
    <title>장난감등록</title>
 </head>
-
+<style>
+   .regist{
+      float: left;
+   }
+</style>
 <body>
-      <form action="/toy/bidRegist" method="POST" enctype="multipart/form-data">
+      <form class="regist" action="/toy/bidRegist" method="POST" enctype="multipart/form-data">
       <h1>경매등록</h1>
       <hr/>
       <br>
