--- a/views/sub/main.ejs
+++ b/views/sub/main.ejs
@@ -21,28 +21,104 @@
         background-color: #FFEE30;
         padding-bottom: 10px;
         float: left;
+        
+
+    }
+
+    .nav {
+        width: 100%;
+        background-color: #FFEE30;
+        text-align: center;
+        float: left;
+
+    }
+
+    .leftnav {
+        width: 50%;
+        text-align: center;
+        float: left;
+    }
+
+    .rightnav {
+        width: 50%;
+        text-align: center;
+        float: left;
+    }
+
+    .bida1 {
+        font-size: 1.5rem;
+        color: #EF4035;
+        padding-top: 3px;
+
+    }
+
+    .bida1:hover {
+        background: #FF3E3F;
+        border-radius: 10px;
+        color: white;
+    }
+
+    .popa2 {
+        font-size: 1.5rem;
+        padding-top: 3px;
+        color: #FF861B;
+        margin-right: 40px;
+    }
+
+    .popa2:hover {
+        background: #FF861B;
+        border-radius: 10px;
+        color: white;
+    }
+
+    .deada3 {
+        font-size: 1.5rem;
+        padding-top: 3px;
+        color: #12BAFF;
+    }
+
+    .deada3:hover {
+        background: #12BAFF;
+        border-radius: 10px;
+        color: white;
+    }
+
+    .toies {
+        float: left;
+        width: 33%;
+        text-align: center;
+        margin-top: 5%;
+    }
+
+    .toyPic {
+        width: 50%;
+        height: 50%;
     }
 </style>
 
 <body>
-
     <div class="main">
         <div class="search">
             <form style="text-align:center;" action="/inquire" method="POST">
-                <input style="width:300px; height:30px; border-radius: 5px;" type="search" name="inquire" size="30"
-                    maxlength="35">
+                <input style="width:300px; height:30px; border-radius: 5px; border: 2px solid green;" type="search" name="inquire" size="30"
+                    maxlength="35" >
                 <button style="height: 30px; border-radius: 10px;" type="submit" id="search">검색</button>
             </form>
         </div>
-        <a href="/toy/bidRegist">경매등록</a>
-        <a href="/popular">인기순</a>
-        <a href="/deadLine">마감입박순</a>
-
+        <div class="nav">
+            <div class="leftnav">
+                <a class="bida1" href="/toy/bidRegist">경매등록</a>
+            </div>
+            <div class="rightnav">
+                <a class="popa2" href="/popular">인기순</a>
+                <a class="deada3" href="/deadLine">마감입박순</a>
+            </div>
+        </div>
         <%for(var i=0;i<data.length; i++) { %>
-            <% if(data[i].bidState=="입찰중"){%>
-        <div style="float: left; width: 300px; margin: 6%;">
-            <div><a href="/toy/detail/<%=data[i].toyId%>"><img src="/<%=data[i].toyPic%>" width="400" height="430"
-                        class="toyPic" alt="상품이미지" /></a></div>
+        <% if(data[i].bidState=="입찰중"){%>
+        <div class="toies">
+            <div><a href="/toy/detail/<%=data[i].toyId%>"><img src="/<%=data[i].toyPic%>" class="toyPic"
+                        alt="상품이미지" /></a></div>
             <div><a style="text-decoration: none; color: black;" href="/toy/detail/<%=data[i].toyId%>">
                     <h2><%=data[i].toyName%></h2>
                 </a></div>
