--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -33,7 +33,7 @@
         width: 100%;
         height: 100px;
         float: left;
-        background-color: #FFEE30;
+        background-color: #A6D5FE;
     }
 
     .a1 {
@@ -71,7 +71,7 @@
 
     .logoutB {
         background-color: #FFEE30;
-        color: #47AA42 ;
+        color: #074384; ;
     }
 
 
@@ -113,15 +113,15 @@
         </div>
         <div class="list">
             <%if(sess.info) {%>
-            <a style="color: #005DAB;" class="a1" href="#"><%=sess.info.name%>친구</a>
-            <a style="color: #F78F1E;" class="a1" href="/users/coin">코인충전소</a>
-            <a style="color: #EF4035;" class="a1" href="/users/mypage">마이페이지</a>
+            <a style="color: #074384;" class="a1" href="#"><%=sess.info.name%>친구</a>
+            <a style="color: #074384;" class="a1" href="/users/coin">코인충전소</a>
+            <a style="color: #074384;" class="a1" href="/users/mypage">마이페이지</a>
             <form class="logout" action="/users/logout" method="post">
                 <button class="logoutB" type="submit">로그아웃</button>
             </form>
             <% } else { %>
-            <a style="color: #F78F1E;" class="a1" href="/users/login">로그인</a>
-            <a style="color: #EF4035;" class="a1" href="/users/join">회원가입</a>
+            <a style="color: #074384;" class="a1" href="/users/login">로그인</a>
+            <a style="color: #074384;" class="a1" href="/users/join">회원가입</a>
             <% } %>
         </div>
     </div>
