--- a/views/join.ejs
+++ b/views/join.ejs
@@ -6,32 +6,31 @@
 <style>
   .join{
     float: left;
+    width: 100%;
+    text-align: center;
   }
+  input::placeholder {
+  font-style: italic;
+  color: #3C50D2;
+}
 </style>
 <body>
       <form class="join" action="/users/join" method="POST">
-      <h1>회원가입</h1>
-      <hr/>
+      <h1 style="color: #47AA42; text-align: center; height: 50px; padding-top:80px;">회원가입</h1>
+      <br>   
+      <input type="text" id="id" placeholder="   아이디" name="id" style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2;">
       <br>
-      <label>아이디</label>   
-      <input type="text" id="id" name="id">
+      <input type="password" id="pw" placeholder="   비밀번호" name="pw" style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2; margin-top:30px">
       <br>
-      <label>비밀번호</label>
-      <input type="password" id="pw" name="pw">
+      <input type="text" id="name" placeholder="   이름" name="name" style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2; margin-top:30px">
       <br>
-      <label>이름</label>
-      <input type="text" id="name" name="name">
+      <input type="text" id="address" placeholder="   주소" name="address" style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2; margin-top:30px">
       <br>
-      <label>주소</label>
-      <input type="text" id="address" name="address">
+      <input type="tel" id="tel" placeholder="   부모님 휴대폰 번호" name="tel" style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2; margin-top:30px">
       <br>
-      <label>부모님 휴대폰번호</label>
-      <input type="tel" id="tel" name="tel">
+      <input type="text" id="parentsPw" placeholder="   부모님 비밀번호" name="parentsPw" style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2; margin-top:30px">
       <br>
-      <label>부모님 비밀번호</label>
-      <input type="text" id="parentsPw" name="parentsPw">
-      <br>
-      <input id="signup_button"  type="submit"  value="회원가입">
+      <input id="signup_button"  type="submit"  value="회원가입" style="width: 100px; height: 30px; background-color:#FFEE30; border-radius: 5px; color: #3C50D2; margin-top:30px">
         </div>
     </form>
 </body>
