--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
    <title>로그인</title>
 </head>
 <style>
-   .login{
+   .login {
       float: left;
+      width: 100%;
+      text-align: center;
    }
+   input::placeholder {
+  font-style: italic;
+  color: #3C50D2;
+}
 </style>
-<body id='lo-jo'>    
-      <form class="login" action="/users/login" method="POST">
-        <h1>로그인</h1>
-        <hr/>
-        <label>아이디</label>
-        <input type="text" id="id" name="id"><br>          
-        <label>패스워드</label> 
-        <input type="password" id="pw" name="pw"><br>
-      <input id="login_button" type="submit"  value="로그인"/><br>
-      <a href="/users/join" style="margin-left:130px;">회원가입</a>
-      </form>
+
+<body>
+   <form class="login" action="/users/login" method="POST">
+      <div style="text-align: center; height: 120px; padding-top:80px;">
+         <h1 style="color: #47AA42;">로그인</h1>
+      </div>
+      <div>
+         <div>
+            <input type="text" id="id" name="id" placeholder="      아이디"
+               style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2;"><br>
+         </div>
+         <div style="margin-top: 30px;">
+            <input type="password" id="pw" name="pw" placeholder="      비밀번호"
+               style="width:300px; height:30px; border-radius: 5px; border: 2px solid #3C50D2;"><br>
+         </div>
+         <div style="margin-top:30px;">
+
+            <input id="login_button" type="submit" value="로그인"
+               style="width: 100px; height: 30px; background-color:#FFEE30; border-radius: 5px; color: #3C50D2;"/>  <br>
+         </div>
+         <div style="margin-top: 10px;">
+            <a href="/users/join">회원가입</a>
+         </div>
+      </div>
+   </form>
 </body>
+
 </html>
