--- a/views/sub/detail.ejs
+++ b/views/sub/detail.ejs
@@ -6,31 +6,39 @@
     <title>장난감 상세보기</title>
 </head>
 <style>
-    .detail{
+    .detail {
         float: left;
     }
+    
 </style>
+
 <body>
     <%for(var i=0;i<data.length; i++) { %>
-    <form class="detail" action="/bid/<%= data[i].toyId %>" method="POST" style="width: 100%; height: 1000px;">
+    <form class="detail" action="/bids/bid/<%= data[i].toyId %>" method="POST" style="width: 100%; height: 1000px;">
         <div style="margin: 10%;">
-            <h2 style="width: 300px;"><%=data[i].toyName%></h2>
+            <h1 style="width: 300px;"><%=data[i].toyName%></h1>
             <hr />
-            <div style="width: 50%; float: left;">
-                <img style="margin-left:13% ;" src="/<%=data[i].toyPic%>" width="300" height="300" alt="상품이미지" />
+            <div style="width: 60%; float: left;">
+                <img style="margin-left:5rem ;" src="/<%=data[i].toyPic%>" width="500" height="500" alt="상품이미지" />
             </div>
-            <div style="width: 50%; float: left;">
+            <div style="width: 40%; float: left;">
                 <h4>현재 입찰 코인 : <%=data[i].currentCoin%></h4>
                 <h4>경매기간 : <%=data[i].endTime%></h4>
                 <h4>판매사유 : <%=data[i].saleReason%> </h4>
                 <h4>현재<%=data[i].bidNum%>명의 친구가 입찰했어요! </h4>
-                <h4>설명</h4>  
-                <div style=" width:400px; height: 100px; border: 1px solid black;"><p style="margin: 5px;"><%=data[i].toyExp%></p></div>
-                <a href="#">입찰자명단보기</a>
-         </div>
-            <div style="float: left; width:100%; margin-top: 20px; text-align: right;">
-                <input type="text" id="bidCoin" name="bidCoin" placeholder="입찰할 코인 개수를 입력하세요">
-                <input type="submit" value="입찰하기" style="margin-right: 10px; width: 200px; height: 50px; background-color:black; border-radius: 10px; border:1px solid black; font-size: 15px; color:white;">
+                <div style="font-weight: bold;">설명</div>
+                <div
+                    style=" width:70%; height: 250px; padding:10px 10px; border: 1px solid #7c9cba; border-radius: 10px;">
+                    <p style="margin: 5px;"><%=data[i].toyExp%></p>
+                </div>
+                <div style="margin-top: 30px;">
+                    <a style="font-size: 1.5rem; color: teal;" href="/bids/bidChild/<%=data[i].toyId%>">입찰자명단보기</a>
+                </div>
+            </div>
+            <div style="float: left; width:91%; margin-top: 20px; text-align: right;">
+                <input style="width: 200px; height: 30px; border-radius: 10px; border: 2px solid #576C81;" type="text" id="bidCoin" name="bidCoin" placeholder="입찰할 코인 개수를 입력하세요">
+                <input type="submit" value="입찰하기"
+                    style="margin-right: 10px; width: 200px; height: 35px; background-color:#7C9CBA; border-radius: 10px; border:1px solid black; font-size: 15px; color:white;">
             </div>
         </div>
     </form>
