--- a/views/sub/main.ejs
+++ b/views/sub/main.ejs
@@ -14,7 +14,7 @@
 
     .search {
         width: 100%;
-        background-color: #A6D5FE;
+        background-color: #9bd2ff;
         padding-bottom: 10px;
         float: left;
 
@@ -23,7 +23,7 @@
 
     .nav {
         width: 100%;
-        background-color:  white;
+        background-color: #9bd2ff;
         text-align: center;
         float: left;
 
@@ -43,38 +43,38 @@
 
     .bida1 {
         font-size: 1.5rem;
-        color: #EF4035;
-        padding-top: 3px;
+        color: #ff9393;
+        padding: 5px 5px;
 
     }
 
     .bida1:hover {
-        background: #FF3E3F;
+        background: #f7d4ad;
         border-radius: 10px;
         color: white;
     }
 
     .popa2 {
         font-size: 1.5rem;
-        padding-top: 3px;
-        color: #FF861B;
+        padding: 5px 5px;
+        color: #ff93de;
         margin-right: 40px;
     }
 
     .popa2:hover {
-        background: #FF861B;
+        background: #afebbe;
         border-radius: 10px;
         color: white;
     }
 
     .deada3 {
         font-size: 1.5rem;
-        padding-top: 3px;
-        color: #12BAFF;
+        padding: 5px 5px;
+        color: #9397ff;
     }
 
     .deada3:hover {
-        background: #12BAFF;
+        background: #dba8e6;
         border-radius: 10px;
         color: white;
     }
@@ -109,7 +109,7 @@
         font-size: 50px;
         -webkit-perspective: 50em;
         perspective: 50em;
-        
+
     }
 
     figure.snip1283 * {
@@ -168,13 +168,13 @@
         text-decoration: none;
         color: #ffffff;
         display: inline-block;
-        margin-top:4rem ;
+        margin-top: 4rem;
     }
 
     figure.snip1283 .read-more:hover {
         background-color: #7c9cba;
         color: #000000;
-        border-radius:50px;
+        border-radius: 50px;
     }
 
     figure.snip1283:hover img,
@@ -216,7 +216,8 @@
         <%for(var i=0;i<data.length; i++) { %>
         <% if(data[i].bidState=="입찰중"){%>
         <div class="toies">
-            <figure class="snip1283" style="text-align: center; margin:0 auto; border: 1px solid #7c9cba ; border-radius: 40px;" >
+            <figure class="snip1283"
+                style="text-align: center; margin:0 auto; border: 2px solid #7c9cba ; border-radius: 40px;">
                 <img src="/<%=data[i].toyPic%>" alt="상품이미지" />
                 <figcaption>
                     <h3><%=data[i].toyName%></h3>
