--- a/views/sub/mypage.ejs
+++ b/views/sub/mypage.ejs
@@ -37,7 +37,7 @@
             <%for(var i=0;i<data.length; i++) { %>
             <div class="inlayout1" >
                 <div><a href="/toy/detail/<%=data[i].toyId%>"><img class="mytoyimg" src="/<%=data[i].toyPic%>" class="toyPic" alt="상품이미지" /></a></div>
-                <div><a style="text-decoration: none; color: black;" href="/detail/<%=data[i].toyId%>">
+                <div><a style="text-decoration: none; color: black;" href="/toy/detail/<%=data[i].toyId%>">
                         <h2><%=data[i].toyName%></h2>
                     </a></div>
                 <div>
