--- a/views/sub/bidRegist.ejs
+++ b/views/sub/bidRegist.ejs
@@ -70,11 +70,8 @@
       <input type="text" id="toyExp" name="toyExp" placeholder="장난감 설명을 입력하세요"
          style="width:300px; height:30px; border-radius: 5px; border: 2px solid #9397ff; margin-bottom: 20px;">
       <br>
-      <input type="text" id="startCoin" name="startCoin" placeholder="경매를 시작할 코인을 정해주세요"
-         style="width:300px; height:30px; border-radius: 5px; border: 2px solid #93ceff; margin-bottom: 20px;">
-      <br>
       <input type="datetime-local" id="endTime" name="endTime"
-         style="width:300px; height:30px; border-radius: 5px; border: 2px solid #93fff2;">
+         style="width:300px; height:30px; border-radius: 5px; border: 2px solid #93ceff;">
       <br>
       <input type="submit" value="등록하기" style="border: 1px solid #ff9393; border-radius: 20px; color: #9397ff; margin-top: 30px; width: 70px; height: 20px;" >
    </form>
