--- a/views/sub/main.ejs
+++ b/views/sub/main.ejs
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>메인화면</title>
+    <meta charset="UTF-8">
 </head>
 
 <style>
@@ -14,7 +15,7 @@
 
     .search {
         width: 100%;
-        background-color: #9bd2ff;
+        background-color: #0f4c81;
         padding-bottom: 10px;
         float: left;
 
@@ -23,29 +24,24 @@
 
     .nav {
         width: 100%;
-        background-color: #9bd2ff;
+        background-color: #0f4c81;
         text-align: center;
         float: left;
+        margin-bottom: 10px;
 
-    }
-
-    .leftnav {
-        width: 50%;
-        text-align: center;
-        float: left;
     }
 
     .rightnav {
-        width: 50%;
-        text-align: center;
+        width: 100%;
+        text-align: right;
         float: left;
     }
 
     .bida1 {
         font-size: 1.5rem;
-        color: #ff9393;
+        color: #BDD3E2;
         padding: 5px 5px;
-
+        margin-right: 40px;
     }
 
     .bida1:hover {
@@ -57,7 +53,7 @@
     .popa2 {
         font-size: 1.5rem;
         padding: 5px 5px;
-        color: #ff93de;
+        color: #BDD3E2;
         margin-right: 40px;
     }
 
@@ -70,7 +66,7 @@
     .deada3 {
         font-size: 1.5rem;
         padding: 5px 5px;
-        color: #9397ff;
+        color: #BDD3E2;
     }
 
     .deada3:hover {
@@ -198,17 +194,15 @@
     <div class="main">
         <div class="search">
             <form style="text-align:center;" action="/inquire" method="POST">
-                <input style="width:300px; height:30px; border-radius: 5px; border: 2px solid #576C81;" type="search"
+                <input style="width:300px; height:30px; border: 2px solid #576C81;" type="search"
                     name="inquire" size="30" maxlength="35">
-                <button style="height: 30px; border-radius: 10px; border: 2px solid #576C81;" type="submit"
+                <button style="height: 30px; border: 2px solid #576C81;" type="submit"
                     id="search">검색</button>
             </form>
         </div>
         <div class="nav">
-            <div class="leftnav">
+                <div class="rightnav">
                 <a class="bida1" href="/toy/bidRegist">경매등록</a>
-            </div>
-            <div class="rightnav">
                 <a class="popa2" href="/popular">인기순</a>
                 <a class="deada3" href="/deadLine">마감입박순</a>
             </div>
@@ -217,7 +211,7 @@
         <% if(data[i].bidState=="입찰중"){%>
         <div class="toies">
             <figure class="snip1283"
-                style="text-align: center; margin:0 auto; border: 2px solid #7c9cba ; border-radius: 40px;">
+                style="text-align: center; margin:0 auto; border: 2px solid #eef2f5 ;">
                 <img src="/<%=data[i].toyPic%>" alt="상품이미지" />
                 <figcaption>
                     <h3><%=data[i].toyName%></h3>
